# gtk-layer-shell-rs

./: Cargo.toml
examples/: example.rs
gtk-layer-shell-sys/: Cargo.toml
src/: lib.rs
src/auto/: versions.txt
