[package]
name = "gtk-layer-shell"
version = "0.1.0"
authors = ["David McKinney <mckinney@subgraph.com>"]
edition = "2018"

[dependencies]
libc = "0.2.68"
bitflags = "1.2.1"
gdk = { version = "0.12.1", features = ["v3_22"] }
glib = "0.9.3"
gtk = "0.8.1"
gtk-layer-shell-sys = { path = "gtk-layer-shell-sys" }
