[package]
name = "gtk-layer-shell-sys"
version = "0.0.1"
links = "gtk_layer_shell"
build = "build.rs"

[lib]
name = "gtk_layer_shell_sys"

[dependencies]
cairo-sys-rs = "0.9.2"
gdk-sys = "0.9.1"
gdk-pixbuf-sys = "0.9.1"
gio-sys = "0.9.1"
glib-sys = "0.9.1"
gobject-sys = "0.9.1"
gtk-sys = "0.9.2"
libc = "0.2.68"

[build-dependencies]
pkg-config = "0.3.17"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
