[package]
name = "gtk-layer-shell-sys"
version = "0.0.1"
links = "gtk_layer_shell"
build = "build.rs"

[lib]
name = "gtk_layer_shell_sys"

[dependencies]
cairo-sys-rs = "0.10.0"
gdk-sys = "0.10.0"
gdk-pixbuf-sys = "0.10.0"
gio-sys = "0.10.0"
glib-sys = "0.10.0"
gobject-sys = "0.10.0"
gtk-sys = "0.10.0"
libc = "0.2.74"

[build-dependencies]
pkg-config = "0.3.18"

[dev-dependencies]
shell-words = "1.0.0"
tempdir = "0.3"

[features]
dox = []
